[package]
name = "strategies"
version = "0.1.0"
authors = ["Mario Nachbaur <mario.nachbaur@outlook.com>"]

description = "A library that implements many algorithm-solving strategies."
keywords = ["algorithm", "problem"]
readme = "README.md"

repository = "https://github.com/marionauta/strategies"
license = "MIT"

exclude = [".travis.yml", ".gitignore"]
